# weatherflow

./: .gitignore  CLAUDE.md  DEPLOY.md  HARD_TO_DIAGNOSE_PROBLEMS.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_EXECUTIVE_SUMMARY.md  INTEGRATION_STRATEGY_README.md  INTEGRATION_WORK_SUMMARY.txt  INVESTIGATION_README.md  LICENSE  Makefile  PRODUCT_HYPOTHESIS.md  PYTHON_TO_WEB_FILE_MAPPING.md  PYTHON_WEB_INTEGRATION_STRATEGY.md  QUICK_START_INTEGRATION_GUIDE.md  README.md  STREAMLIT_APP_INVESTIGATION_REPORT.md  STREAMLIT_ARCHITECTURE_SUMMARY.md  TRAINING_INSTRUCTIONS.txt  VISUAL_GUIDE_README.md  WeatherFlow_Onboarding.pptx  WeatherFlow_User_Guide.html  WeatherFlow_Visual_Guide_Final.html  __init__.py  app.py  conftest.py  convert_to_pdf.py  create_diagrams.py  create_final_guide.py  create_visual_guide.py  docker-compose.prod.yml  fly.toml  mkdocs.yml  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  setup.py  take_screenshots.py  test_install.py  (+2 more)
api/: index.py  requirements.txt
atmospheric_chemistry_julia/: Project.toml  README.md
autoresearch/: __init__.py  __main__.py  experiment_config.py  program.md  run_autoresearch.py  train_experiment.py
deploy/: Dockerfile.api  Dockerfile.streamlit  nginx.conf  railway-streamlit.json
docs/: GAIA_FOUNDATION_MODEL.md  troubleshooting.md
ensemble/: __init__.py
examples/: VISUALIZATIONS.md
experiments/: ablation_study.py  quick_ablation_demo.py  weatherbench2_evaluation.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
gcm_examples/: run_tropic_world.py  run_tropic_world_interactive_3d.py  test_gcm_physics.py
marketing/: linkedin_carousel.md  linkedin_post.md  screenshot_guide.md
model_zoo/: README.md
notebooks/: model-training-notebook.ipynb  real_training_colab.ipynb
physics/: __init__.py
scripts/: build.sh  check_version.py  deploy-cloud.sh  deploy.sh  dev.sh  generate_presentation.py  interactive.py  lint.sh  setup-cloud-secrets.sh
streamlit_app/: Home.py  README.md  animation_utils.py  checkpoint_utils.py  cloud_cost_utils.py  data_storage.py  dataset_context.py  era5_utils.py  prepare_data.py  (+5 more)
(+382 files in other folders)
