[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherflow"
description = "Flow-based weather prediction models with physics constraints"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9",
    "numpy>=1.20",
    "xarray>=0.19",
    "matplotlib>=3.4",
    "cartopy>=0.21",
    "h5py>=3.0",
    "wandb",
    "tqdm"
]
dynamic = ["version"]
